feat: сделать попап для показа картинки и описания работ

--- a/src/index.html
+++ b/src/index.html
@@ -349,18 +349,27 @@
         <div class="work-list-container">
           <ul class="work-list">
             <li class="work-list__item">
-              <img class="work-list__item-image" loading="lazy" src="./images/work-image-1.jpg" alt="Volkswagen Polo 1.6">
+              <div class="work-list__layout">
+                <p class="work-list__layout-text">Подробнее</p>
+              </div>
+              <img class="work-list__item-image" loading="lazy" src="./images/work-image-1.jpg"
+                alt="Volkswagen Polo 1.6">
               <h3 class="work-list__item-title">Volkswagen Polo 1.6</h3>
               <div class="work-list__item-description">
                 <p class="work-list__item-text">Клиент жаловался на то что не срабатывал вентилятор охлаждения двигателя
                   и
                   не было зарядки от генератора.</p>
                 <p class="work-list__item-text">После диагностики выявили участок электропроводки который имел
-                  обрыв. Выполнили ремонт и убедились в работоспособности всех узлов, клиент доволен!
+                  обрыв.
+                </p>
+                <p class="work-list__item-text">Выполнили ремонт и убедились в работоспособности всех узлов, клиент доволен!
                 </p>
               </div>
             </li>
             <li class="work-list__item">
+              <div class="work-list__layout">
+                <p class="work-list__layout-text">Подробнее</p>
+              </div>
               <img class="work-list__item-image" loading="lazy" src="./images/work-image-2.jpg" alt="Volkswagen Polo">
               <h3 class="work-list__item-title">Volkswagen Polo</h3>
               <div class="work-list__item-description">
@@ -370,7 +379,11 @@
               </div>
             </li>
             <li class="work-list__item">
-              <img class="work-list__item-image" loading="lazy" src="./images/work-image-3.jpg" alt="Toyota Avensis 1.8">
+              <div class="work-list__layout">
+                <p class="work-list__layout-text">Подробнее</p>
+              </div>
+              <img class="work-list__item-image" loading="lazy" src="./images/work-image-3.jpg"
+                alt="Toyota Avensis 1.8">
               <h3 class="work-list__item-title">Toyota Avensis 1.8</h3>
               <div class="work-list__item-description">
                 <p class="work-list__item-text">Выполнили плановое техническое обслуживание!</p>
@@ -382,6 +395,9 @@
               </div>
             </li>
             <li class="work-list__item">
+              <div class="work-list__layout">
+                <p class="work-list__layout-text">Подробнее</p>
+              </div>
               <img class="work-list__item-image" loading="lazy" src="./images/work-image-4.jpg" alt="Skoda Fabia 1.2">
               <h3 class="work-list__item-title">Skoda Fabia 1.2</h3>
               <div class="work-list__item-description">
@@ -394,6 +410,9 @@
               </div>
             </li>
             <li class="work-list__item">
+              <div class="work-list__layout">
+                <p class="work-list__layout-text">Подробнее</p>
+              </div>
               <img class="work-list__item-image" loading="lazy" src="./images/work-image-5.jpg" alt="Skoda Octavia">
               <h3 class="work-list__item-title">Skoda Octavia</h3>
               <div class="work-list__item-description">
@@ -402,6 +421,9 @@
               </div>
             </li>
             <li class="work-list__item">
+              <div class="work-list__layout">
+                <p class="work-list__layout-text">Подробнее</p>
+              </div>
               <img class="work-list__item-image" loading="lazy" src="./images/work-image-6.jpg" alt="Skoda Octavia">
               <h3 class="work-list__item-title">Skoda Octavia</h3>
               <div class="work-list__item-description">
@@ -409,6 +431,9 @@
               </div>
             </li>
             <li class="work-list__item">
+              <div class="work-list__layout">
+                <p class="work-list__layout-text">Подробнее</p>
+              </div>
               <img class="work-list__item-image" loading="lazy" src="./images/work-image-7.jpg" alt="Audi A4">
               <h3 class="work-list__item-title">Audi A4</h3>
               <div class="work-list__item-description">
@@ -416,6 +441,9 @@
               </div>
             </li>
             <li class="work-list__item">
+              <div class="work-list__layout">
+                <p class="work-list__layout-text">Подробнее</p>
+              </div>
               <img class="work-list__item-image" loading="lazy" src="./images/work-image-8.jpg" alt="Mazda CX-7">
               <h3 class="work-list__item-title">Mazda CX-7</h3>
               <div class="work-list__item-description">
@@ -432,6 +460,9 @@
               </div>
             </li>
             <li class="work-list__item">
+              <div class="work-list__layout">
+                <p class="work-list__layout-text">Подробнее</p>
+              </div>
               <img class="work-list__item-image" loading="lazy" src="./images/work-image-9.jpg" alt="Audi A5">
               <h3 class="work-list__item-title">Audi A5</h3>
               <div class="work-list__item-description">
@@ -441,7 +472,11 @@
               </div>
             </li>
             <li class="work-list__item">
-              <img class="work-list__item-image" loading="lazy" src="./images/work-image-10.jpg" alt="Volkswagen Touareg">
+              <div class="work-list__layout">
+                <p class="work-list__layout-text">Подробнее</p>
+              </div>
+              <img class="work-list__item-image" loading="lazy" src="./images/work-image-10.jpg"
+                alt="Volkswagen Touareg">
               <h3 class="work-list__item-title">Volkswagen Touareg</h3>
               <div class="work-list__item-description">
                 <p class="work-list__item-text">Замена пыльников передних наружных ШРУСов, пыльника шаровой нижнего
@@ -451,6 +486,9 @@
               </div>
             </li>
             <li class="work-list__item">
+              <div class="work-list__layout">
+                <p class="work-list__layout-text">Подробнее</p>
+              </div>
               <img class="work-list__item-image" loading="lazy" src="./images/work-image-11.jpg" alt="Skoda Fabia">
               <h3 class="work-list__item-title">Skoda Fabia</h3>
               <div class="work-list__item-description">
@@ -461,6 +499,9 @@
               </div>
             </li>
             <li class="work-list__item">
+              <div class="work-list__layout">
+                <p class="work-list__layout-text">Подробнее</p>
+              </div>
               <img class="work-list__item-image" loading="lazy" src="./images/work-image-12.jpg" alt="Skoda Octavia">
               <h3 class="work-list__item-title">Skoda Octavia</h3>
               <div class="work-list__item-description">
@@ -523,6 +564,12 @@
     <h2 class="main__title">Будем рады видеть Вас!</h2>
     <a class="button-up button-up_is-hidden" href="#start"></a>
   </main>
+  <div class="popup">
+    <div class="popup__container">
+      <button class="popup__close"></button>
+      <img class="popup__image" src="" alt="">
+    </div>
+  </div>
   <footer class="footer">
     <div class="footer__container">
       <div class="footer__copywriting">
