feat: сжать картинки по рекомендации Lighthouse

--- a/src/index.html
+++ b/src/index.html
@@ -345,7 +345,7 @@
     <section class="work" aria-label="Фото и описание наших работ" id="work">
       <h2 class="section__title">НАШИ РАБОТЫ</h2>
       <div class="work-container">
-        <button class="work-button work-button_prev"></button>
+        <button class="work-button work-button_prev" aria-label="Переключить карусель назад"></button>
         <div class="work-list-container">
           <ul class="work-list">
             <li class="work-list__item">
@@ -515,7 +515,7 @@
             </li>
           </ul>
         </div>
-        <button class="work-button work-button_next"></button>
+        <button class="work-button work-button_next" aria-label="Переключить карусель вперед"></button>
       </div>
     </section>
     <section class="contacts" aria-label="Наши контакты" id="contacts">
