feat: Улучшить скорость загрузки, проверить валидатором

--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>BGP AUTO</title>
   <meta name="description" content="Автосервис BGP AUTO.">
+  <link rel="preload" fetchpriority="high" as="image" href="./images/background-main.webp" type="image/webp">
   <link rel="stylesheet" href="./index.css">
   <link rel="icon" href="./images/icon.svg" type="image/svg+xml" sizes="any">
 </head>
@@ -25,7 +26,7 @@
           <a class="header__reception" href="#reception">
             <div class="header__reception-container">
               <p class="header__reception-text">Заказать обратный звонок</p>
-              <div class="header__reception-icon header__reception-icon_inscribed"></div>
+              <div class="header__reception-icon"></div>
             </div>
           </a>
           <a class="header__address-container" href="#map"
@@ -174,7 +175,7 @@
       <div class="prices__type-work">
         <button class="prices__title" id="engine">
           Двигатель
-          <div class="prices__title-check"></div>
+          <span class="prices__title-check"></span>
         </button>
         <div class="prices__table-container">
           <ul class="prices__table">
@@ -205,7 +206,7 @@
       <div class="prices__type-work">
         <button class="prices__title" id="chassis">
           Ходовая часть
-          <div class="prices__title-check"></div>
+          <span class="prices__title-check"></span>
         </button>
         <div class="prices__table-container">
           <ul class="prices__table">
@@ -238,7 +239,7 @@
       <div class="prices__type-work">
         <button class="prices__title" id="transmission">
           КПП и трансмиссия
-          <div class="prices__title-check"></div>
+          <span class="prices__title-check"></span>
         </button>
         <div class="prices__table-container">
           <ul class="prices__table">
@@ -257,7 +258,7 @@
       <div class="prices__type-work">
         <button class="prices__title" id="to">
           Плановое ТО
-          <div class="prices__title-check"></div>
+          <span class="prices__title-check"></span>
         </button>
         <div class="prices__table-container">
           <ul class="prices__table">
@@ -284,7 +285,7 @@
       <div class="prices__type-work">
         <button class="prices__title" id="diagnostics">
           Диагностика
-          <div class="prices__title-check"></div>
+          <span class="prices__title-check"></span>
         </button>
         <div class="prices__table-container">
           <ul class="prices__table">
@@ -356,7 +357,7 @@
           <ul class="work-list">
             <li class="work-list__item">
               <button class="work-list__layout" aria-label="Volkswagen Polo 1.6">
-                <p class="work-list__layout-text">Подробнее</p>
+                <span class="work-list__layout-text">Подробнее</span>
               </button>
               <img class="work-list__item-image" loading="lazy" src="./images/work-image-1.jpg"
                 alt="Фото Volkswagen Polo 1.6">
@@ -375,7 +376,7 @@
             </li>
             <li class="work-list__item">
               <button class="work-list__layout" aria-label="Volkswagen Polo">
-                <p class="work-list__layout-text">Подробнее</p>
+                <span class="work-list__layout-text">Подробнее</span>
               </button>
               <img class="work-list__item-image" loading="lazy" src="./images/work-image-2.jpg"
                 alt="Фото Volkswagen Polo">
@@ -388,7 +389,7 @@
             </li>
             <li class="work-list__item">
               <button class="work-list__layout" aria-label="Toyota Avensis 1.8">
-                <p class="work-list__layout-text">Подробнее</p>
+                <span class="work-list__layout-text">Подробнее</span>
               </button>
               <img class="work-list__item-image" loading="lazy" src="./images/work-image-3.jpg"
                 alt="Фото Toyota Avensis 1.8">
@@ -404,7 +405,7 @@
             </li>
             <li class="work-list__item">
               <button class="work-list__layout" aria-label="Skoda Fabia 1.2">
-                <p class="work-list__layout-text">Подробнее</p>
+                <span class="work-list__layout-text">Подробнее</span>
               </button>
               <img class="work-list__item-image" loading="lazy" src="./images/work-image-4.jpg"
                 alt="Фото Skoda Fabia 1.2">
@@ -420,7 +421,7 @@
             </li>
             <li class="work-list__item">
               <button class="work-list__layout" aria-label="Skoda Octavia">
-                <p class="work-list__layout-text">Подробнее</p>
+                <span class="work-list__layout-text">Подробнее</span>
               </button>
               <img class="work-list__item-image" loading="lazy" src="./images/work-image-5.jpg"
                 alt="Фото Skoda Octavia">
@@ -432,7 +433,7 @@
             </li>
             <li class="work-list__item">
               <button class="work-list__layout" aria-label="Skoda Octavia">
-                <p class="work-list__layout-text">Подробнее</p>
+                <span class="work-list__layout-text">Подробнее</span>
               </button>
               <img class="work-list__item-image" loading="lazy" src="./images/work-image-6.jpg"
                 alt="Фото Skoda Octavia">
@@ -443,7 +444,7 @@
             </li>
             <li class="work-list__item">
               <button class="work-list__layout" aria-label="Audi A4">
-                <p class="work-list__layout-text">Подробнее</p>
+                <span class="work-list__layout-text">Подробнее</span>
               </button>
               <img class="work-list__item-image" loading="lazy" src="./images/work-image-7.jpg" alt="Фото Audi A4">
               <h3 class="work-list__item-title">Audi A4</h3>
@@ -453,7 +454,7 @@
             </li>
             <li class="work-list__item">
               <button class="work-list__layout" aria-label="Mazda CX-7">
-                <p class="work-list__layout-text">Подробнее</p>
+                <span class="work-list__layout-text">Подробнее</span>
               </button>
               <img class="work-list__item-image" loading="lazy" src="./images/work-image-8.jpg" alt="Фото Mazda CX-7">
               <h3 class="work-list__item-title">Mazda CX-7</h3>
@@ -472,7 +473,7 @@
             </li>
             <li class="work-list__item">
               <button class="work-list__layout" aria-label="Audi A5">
-                <p class="work-list__layout-text">Подробнее</p>
+                <span class="work-list__layout-text">Подробнее</span>
               </button>
               <img class="work-list__item-image" loading="lazy" src="./images/work-image-9.jpg" alt="Фото Audi A5">
               <h3 class="work-list__item-title">Audi A5</h3>
@@ -484,7 +485,7 @@
             </li>
             <li class="work-list__item">
               <button class="work-list__layout" aria-label="Volkswagen Touareg">
-                <p class="work-list__layout-text">Подробнее</p>
+                <span class="work-list__layout-text">Подробнее</span>
               </button>
               <img class="work-list__item-image" loading="lazy" src="./images/work-image-10.jpg"
                 alt="Фото Volkswagen Touareg">
@@ -498,7 +499,7 @@
             </li>
             <li class="work-list__item">
               <button class="work-list__layout" aria-label="Skoda Fabia">
-                <p class="work-list__layout-text">Подробнее</p>
+                <span class="work-list__layout-text">Подробнее</span>
               </button>
               <img class="work-list__item-image" loading="lazy" src="./images/work-image-11.jpg" alt="Фото Skoda Fabia">
               <h3 class="work-list__item-title">Skoda Fabia</h3>
@@ -511,7 +512,7 @@
             </li>
             <li class="work-list__item">
               <button class="work-list__layout" aria-label="Skoda Octavia">
-                <p class="work-list__layout-text">Подробнее</p>
+                <span class="work-list__layout-text">Подробнее</span>
               </button>
               <img class="work-list__item-image" loading="lazy" src="./images/work-image-12.jpg"
                 alt="Фото Skoda Octavia">
@@ -533,7 +534,7 @@
     <section class="contacts" aria-label="Раздел, наши контакты" id="contacts">
       <h2 class="section__title">КОНТАКТЫ</h2>
       <div class="contacts__container">
-        <h1 class="contacts__title">Свяжитесь с нами по интересующим Вас вопросам</h1>
+        <h3 class="contacts__title">Свяжитесь с нами по интересующим Вас вопросам</h3>
         <p class="contacts__work">График работы</p>
         <p class="contacts__work">ПН - ПТ -&gt; 09:00 - 19:00</p>
         <p class="contacts__work">СБ - ВС -&gt; 09:00 - 18:00</p>
@@ -585,7 +586,7 @@
   <div class="popup">
     <div class="popup__container">
       <button class="popup__close" aria-label="Закрытие всплывающего окна"></button>
-      <img class="popup__image" src="" alt="">
+      <img class="popup__image" src="#" alt="Здесь должно быть изображение">
     </div>
   </div>
   <footer class="footer">
