feat: добавить секцию Запчасти, унифицировать дизайн карточек акций и работ, сделать открытие акций

--- a/src/index.html
+++ b/src/index.html
@@ -49,6 +49,9 @@
                 <a href="#work" class="navigation__link">РАБОТЫ</a>
               </li>
               <li>
+                <a href="#spares" class="navigation__link">ЗАПЧАСТИ</a>
+              </li>
+              <li>
                 <a href="#contacts" class="navigation__link">КОНТАКТЫ</a>
               </li>
               <li>
@@ -78,28 +81,28 @@
         <div class="greetings__title-icon greetings__title-icon_black"></div>
         <h2 class="greetings__title-text">Опыт работы более 6 лет</h2>
       </div>
-      <div class="about-as">
-        <h3 class="about-as__title">За что нас ценят</h3>
-        <ul class="about-as__tagets">
-          <li class="about-as__taget">
-            Мы за честность и открытость - любой клиент может увидеть как мы работаем и присутствовать при ремонте.
-          </li>
-          <li class="about-as__taget">
-            Мы несем личную ответственность за качество выполняемого ремонта и это отличная мотивация делать все
-            качественно.
-          </li>
-          <li class="about-as__taget">
-            За вами выбор - установить ваши запчасти или положиться на нас за покупку запчастей и материалов.
-          </li>
-          <li class="about-as__taget">
-            Предложим варианты запчастей от бюджетных до оригинальных по вашему предпочтению. Большинство запчастей в
-            наличии.
-          </li>
-          <li class="about-as__taget">
-            Имеем опыт работы в диллерских сервисных центрах VAG группы.
-          </li>
-        </ul>
-      </div>
+    </section>
+    <section class="about-as">
+      <h3 class="about-as__title">За что нас ценят</h3>
+      <ul class="about-as__tagets">
+        <li class="about-as__taget">
+          Мы за честность и открытость - любой клиент может увидеть как мы работаем и присутствовать при ремонте.
+        </li>
+        <li class="about-as__taget">
+          Мы несем личную ответственность за качество выполняемого ремонта и это отличная мотивация делать все
+          качественно.
+        </li>
+        <li class="about-as__taget">
+          За вами выбор - установить ваши запчасти или положиться на нас за покупку запчастей и материалов.
+        </li>
+        <li class="about-as__taget">
+          Предложим варианты запчастей от бюджетных до оригинальных по вашему предпочтению. Большинство запчастей в
+          наличии.
+        </li>
+        <li class="about-as__taget">
+          Имеем опыт работы в диллерских сервисных центрах VAG группы.
+        </li>
+      </ul>
     </section>
     <section class="services" aria-label="Раздел, список наших основных услуг" id="services">
       <h2 class="section__title">НАШИ УСЛУГИ И ПРАЙС</h2>
@@ -140,6 +143,9 @@
       <h2 class="section__title">АКЦИИ</h2>
       <ul class="list">
         <li class="list__item">
+          <button class="list__item-layout" aria-label="Акция, Комплексная проверка авто перед покупкой, подробнее">
+            <span class="list__item-layout-text">Подробнее</span>
+          </button>
           <img class="list__item-image" src="./images/promotions-car.jpg" loading="lazy" alt="Фото автомобиля">
           <h3 class="list__item-title">Комплексная проверка авто перед покупкой</h3>
           <ul class="list__item-description">
@@ -152,6 +158,9 @@
           </ul>
         </li>
         <li class="list__item">
+          <button class="list__item-layout" aria-label="Акция, Комплексная проверка авто перед покупкой, подробнее">
+            <span class="list__item-layout-text">Подробнее</span>
+          </button>
           <img class="list__item-image" src="./images/promotions-car-bottom.jpg" loading="lazy"
             alt="Фото осмотр днища и ходовой части">
           <h3 class="list__item-title">Бесплатный осмотр днища и ходовой части</h3>
@@ -165,6 +174,9 @@
           </div>
         </li>
         <li class="list__item">
+          <button class="list__item-layout" aria-label="Акция, Комплексная проверка авто перед покупкой, подробнее">
+            <span class="list__item-layout-text">Подробнее</span>
+          </button>
           <img class="list__item-image" src="./images/promotions-preparation.jpg" loading="lazy"
             alt="Фото канистр масел">
           <h3 class="list__item-title">Сезонная подготовка автомобиля</h3>
@@ -359,6 +371,9 @@
         </div>
         <button class="work-button work-button_next" aria-label="Переключить карусель вперед"></button>
       </div>
+    </section>
+    <section class="spares">
+      <h2 class="section__title">ЗАПЧАСТИ</h2>
     </section>
     <section class="contacts" aria-label="Раздел, наши контакты" id="contacts">
       <h2 class="section__title">КОНТАКТЫ</h2>
