feat: наполнить секцию запчасти

--- a/src/index.html
+++ b/src/index.html
@@ -75,7 +75,7 @@
       </div>
       <div class="greetings__title-container">
         <div class="greetings__title-icon greetings__title-icon_black"></div>
-        <h2 class="greetings__title-text">Использование официальной технической<br>документации и специнструмента</h2>
+        <h2 class="greetings__title-text">Использование официальной технической документации и специнструмента</h2>
       </div>
       <div class="greetings__title-container">
         <div class="greetings__title-icon greetings__title-icon_black"></div>
@@ -96,8 +96,7 @@
           За вами выбор - установить ваши запчасти или положиться на нас за покупку запчастей и материалов.
         </li>
         <li class="about-as__taget">
-          Предложим варианты запчастей от бюджетных до оригинальных по вашему предпочтению. Большинство запчастей в
-          наличии.
+          Предложим варианты запчастей от бюджетных до оригинальных по вашему предпочтению.
         </li>
         <li class="about-as__taget">
           Имеем опыт работы в диллерских сервисных центрах VAG группы.
@@ -105,7 +104,7 @@
       </ul>
     </section>
     <section class="services" aria-label="Раздел, список наших основных услуг" id="services">
-      <h2 class="section__title">НАШИ УСЛУГИ И ПРАЙС</h2>
+      <h2 class="section__title">УСЛУГИ и ЦЕНЫ</h2>
       <div class="services__container">
         <div class="services__grid">
           <button class="services__item services__item_engine" aria-label="Ремонт двигателя">
@@ -372,8 +371,31 @@
         <button class="work-button work-button_next" aria-label="Переключить карусель вперед"></button>
       </div>
     </section>
-    <section class="spares">
+    <section class="spares" aria-label="Раздел, запчасти" id="spares">
       <h2 class="section__title">ЗАПЧАСТИ</h2>
+      <div class="spares__container">
+        <div class="spares__image"></div>
+        <ul class="spares__list">
+          <li class="spares__text">
+            Длительность ремонта напрямую зависит от наличия запчастей,
+            поэтому у нас большой асортимент запчастей в наличии.
+          </li>
+          <li class="spares__text">
+            Качество ремонта напрямую зависит от качества запчастей,
+            поэтому мы работаем только с проверенными производителями.
+          </li>
+          <li class="spares__text">
+            Широкий выбор по ценовым категориям, от бюджетных до огиринальных.
+          </li>
+          <li class="spares__text">
+            Бесплатно подберем необходимые запчасти,
+            если последующая установка будет проводится в нашем сервисе.
+          </li>
+          <li class="spares__text">
+            При заказе полного комплекта расходников для ТО - работы по ТО со скидкой 50%.
+          </li>
+        </ul>
+      </div>
     </section>
     <section class="contacts" aria-label="Раздел, наши контакты" id="contacts">
       <h2 class="section__title">КОНТАКТЫ</h2>
@@ -511,9 +533,11 @@
               <li class="prices__table-name">Ремонт МКПП&nbsp;<span class="prices__table-price">от 5000</span></li>
               <li class="prices__table-name">Замена сцепления МКПП&nbsp;<span class="prices__table-price">от 3000</span>
               </li>
-              <li class="prices__table-name">Замена сцепления DSG DQ200&nbsp;<span class="prices__table-price">от 5000</span>
+              <li class="prices__table-name">Замена сцепления DSG DQ200&nbsp;<span class="prices__table-price">от
+                  5000</span>
               </li>
-              <li class="prices__table-name">Ремонт мехатроника DQ200&nbsp;<span class="prices__table-price">от 10000</span></li>
+              <li class="prices__table-name">Ремонт мехатроника DQ200&nbsp;<span class="prices__table-price">от
+                  10000</span></li>
               <li class="prices__table-name">Замена масла МКПП&nbsp;<span class="prices__table-price">от 800</span></li>
               <li class="prices__table-name">Замена масла АКПП&nbsp;<span class="prices__table-price">от 1000</span>
               </li>
