feat: изменить разметку и стили заголовков прайсов

--- a/src/index.html
+++ b/src/index.html
@@ -463,7 +463,7 @@
       <img class="popup__image" src="#" alt="Здесь будет описание изображения попапа">
       <div class="prices">
         <div class="prices__work prices__work_engine">
-          <div class="prices__title">Двигатель</div>
+          <h4 class="prices__title">Ремонт двигателя</h4>
           <div class="prices__table-container">
             <ul class="prices__table ">
               <li class="prices__table-name prices__table-name_head">Наименование
@@ -499,7 +499,7 @@
           </div>
         </div>
         <div class="prices__work prices__work_chassis">
-          <div class="prices__title">Ходовая часть</div>
+          <h4 class="prices__title">Ходовая часть</h4>
           <div class="prices__table-container">
             <ul class="prices__table ">
               <li class="prices__table-name prices__table-name_head">Наименование
@@ -538,7 +538,7 @@
           </div>
         </div>
         <div class="prices__work prices__work_transmission">
-          <div class="prices__title">КПП и трансмиссия</div>
+          <h4 class="prices__title">Ремонт КПП</h4>
           <div class="prices__table-container">
             <ul class="prices__table ">
               <li class="prices__table-name prices__table-name_head">Наименование
@@ -564,7 +564,7 @@
           </div>
         </div>
         <div class="prices__work prices__work_to">
-          <div class="prices__title">Плановое ТО</div>
+          <h4 class="prices__title">Плановое ТО</h4>
           <div class="prices__table-container">
             <ul class="prices__table ">
               <li class="prices__table-name prices__table-name_head">Наименование
@@ -591,7 +591,7 @@
           </div>
         </div>
         <div class="prices__work prices__work_diagnostics">
-          <div class="prices__title">Диагностика</div>
+          <h4 class="prices__title">Диагностика автомобиля</h4>
           <div class="prices__table-container">
             <ul class="prices__table ">
               <li class="prices__table-name prices__table-name_head">Наименование
