hotfix: набольшие правки по стилям и работе карусели

--- a/src/index.html
+++ b/src/index.html
@@ -68,7 +68,7 @@
     </div>
   </header>
   <main class="main" id="start">
-    <h1 class="main__title">Добро пожаловать!<br>Качественный автосервис по доступной цене BGP&nbsp;AUTO!</h1>
+    <h1 class="main__title">Добро пожаловать!<br>Качественный автосервис по доступной цене - BGP&nbsp;AUTO!</h1>
     <div class="main__background"></div>
     <section class="greetings" aria-label="Раздел, наши преимущества">
       <div class="greetings__title-container">
