feat: проверить валидатором

--- a/src/index.html
+++ b/src/index.html
@@ -116,34 +116,34 @@
       <h2 class="section__title">УСЛУГИ и ЦЕНЫ</h2>
       <div class="services__container">
         <div class="services__grid">
-          <button class="services__item services__item_engine" aria-label="Ремонт двигателя">
+          <div class="services__item services__item_engine" aria-label="Ремонт двигателя" role="button">
             <img class="services__img" src="./images/service-engine.png" alt="Картинка двигателя Volkswagen">
             <div class="services__circel"></div>
             <h3 class="services__title">Ремонт двигателя</h3>
-          </button>
-          <button class="services__item services__item_chassis" aria-label="Ремонт ходовой части">
+          </div>
+          <div class="services__item services__item_chassis" aria-label="Ремонт ходовой части" role="button">
             <img class="services__img" src="./images/service-chassis.png" alt="Картинка ходовой части Volkswagen">
             <div class="services__circel"></div>
             <h3 class="services__title">Ремонт ходовой</h3>
-          </button>
-          <button class="services__item services__item_transmission"
-            aria-label="Ремонт трансмиссии и коробок переменных передач">
+          </div>
+          <div class="services__item services__item_transmission"
+            aria-label="Ремонт трансмиссии и коробок переменных передач" role="button">
             <img class="services__img" src="./images/service-transmission.png"
               alt="Картинка коробки переменных передач Volkswagen DSG">
             <div class="services__circel"></div>
             <h3 class="services__title">Ремонт КПП</h3>
-          </button>
-          <button class="services__item services__item_to" aria-label="Плановое техническое обслуживание">
+          </div>
+          <div class="services__item services__item_to" aria-label="Плановое техническое обслуживание" role="button">
             <img class="services__img" src="./images/service-to.png"
               alt="Картинка набора материалов для технического обслуживания">
             <div class="services__circel"></div>
             <h3 class="services__title">Плановое ТО</h3>
-          </button>
-          <button class="services__item services__item_diagnostics" aria-label="Диагностика и электрика">
+          </div>
+          <div class="services__item services__item_diagnostics" aria-label="Диагностика и электрика" role="button">
             <img class="services__img" src="./images/service-diagnostics.png" alt="Картинка диагностики авто">
             <div class="services__circel"></div>
             <h3 class="services__title">Диагностика</h3>
-          </button>
+          </div>
         </div>
       </div>
     </section>
